# demo-core-nucleo

./: .gitignore  Cargo.toml  Drone.toml  README.md  clippy.toml  layout.ld  thumbv7em-linux-eabihf.json
.cargo/: config
scripts/: _env.sh  build.sh  clippy.sh  debugger.sh  doc.sh  flash.sh  inspect.sh  swo.sh  test.sh
src/: consts.rs  drv.rs  heap.rs  lib.rs  main.rs  origin.rs  reg.rs  reset.rs  sv.rs  thr.rs  thread.rs  trunk.rs  vector_table.rs  vtable.rs
src/drv/: flash.rs  lse.rs  mod.rs  msi.rs  pll.rs
src/drv/rcc/: css.rs  mod.rs  pll.rs
src/exception/: nmi.rs  reset.rs  sys_tick.rs
src/periph/: flash.rs  lse.rs  mod.rs  msi.rs  pll.rs
src/peripherals/rcc/: css.rs  mod.rs  pll.rs
src/thr/: button.rs  led.rs  mod.rs  trunk.rs
