[package]
name = "nucleo-demo"
version = "0.1.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
description = "Example program for STM32 Nucleo using Drone RTOS."
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/drone-os/nucleo-demo"

[dependencies.drone-core]
version = "0.7"
path = "../drone-core"

[dependencies.drone-cortex-m]
version = "0.7"
features = ["stm32l4x6"]
path = "../drone-cortex-m"

[dependencies.futures]
version = "0.1"
default-features = false

[dependencies.clippy]
version = "*"
optional = true

[dev-dependencies.test]
version = "0.2"
features = []
# git = "https://github.com/drone-os/drone-test"
path = "../drone-test"

[[bin]]
name = "nucleo-demo"
path = "src/main.rs"
test = false
doc = false

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[profile.test]
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
panic = "abort"

[profile.doc]
panic = "abort"
