[package]
name = "demo-core-nucleo"
version = "0.1.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
description = "Example program for STM32 Nucleo using Drone RTOS."
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/drone-os/demo-core-nucleo"

[dependencies.drone-core]
version = "0.8"
# path = "../drone-core"

[dependencies.drone-stm32]
version = "0.8"
features = ["stm32l4x6"]
# path = "../drone-stm32"

[dependencies.futures-preview]
version = "0.2"
default-features = false

[dependencies.rlibc]
version = "1"

[dev-dependencies.test]
version = "0.2"
features = []
git = "https://github.com/drone-os/drone-test"
# path = "../drone-test"

[[bin]]
name = "demo-core-nucleo"
path = "src/main.rs"
test = false
doc = false

[profile.dev]
panic = "abort"
incremental = false

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[profile.test]
incremental = false

[profile.bench]
opt-level = 3
lto = true
