[package]
name = "demo-core-nucleo"
version = "0.1.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
description = "Example program for STM32 Nucleo using Drone RTOS."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/drone-os/demo-core-nucleo"

[dependencies.drone-core]
version = "0.9"
git = "https://github.com/drone-os/drone-core"
# path = "../../drone-os/drone-core"

[dependencies.drone-cortex-m]
version = "0.9"
git = "https://github.com/drone-os/drone-cortex-m"
# path = "../../drone-os/drone-cortex-m"

[dependencies.drone-stm32-map]
version = "0.9"
features = ["stm32l4x6"]
git = "https://github.com/drone-os/drone-stm32-map"
# path = "../../drone-os/drone-stm32-map"

[dependencies.drone-stm32-drv]
version = "0.9"
features = ["stm32l4x6"]
git = "https://github.com/drone-os/drone-stm32-drv"
# path = "../../drone-os/drone-stm32-drv"

[dependencies]
futures-preview = { version = "0.3.0-alpha", default-features = false }

[dev-dependencies.test]
version = "0.2"
git = "https://github.com/drone-os/drone-test"

[[bin]]
name = "demo-core-nucleo"
path = "src/main.rs"
test = false
doc = false

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
incremental = false
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
